--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,22 @@ autologin.py
 学习历史数据.xlsx
 __pycache__/auto_chromedrive.cpython-37.pyc
 auto_login.py
+dist/main.exe
+dist/chromedriver.zip
+dist/chromedriver.exe
+build/main/xref-main.html
+build/main/warn-main.txt
+build/main/Tree-02.toc
+build/main/Tree-01.toc
+build/main/Tree-00.toc
+build/main/PYZ-00.toc
+build/main/PYZ-00.pyz
+build/main/PKG-00.toc
+build/main/main.pkg
+build/main/base_library.zip
+build/main/EXE-00.toc
+build/main/main.exe.manifest
+build/main/Analysis-00.toc
+__pycache__/main.cpython-37.pyc
+main.spec
+auto_icon.ico
